k8s/apps/default/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      volumes:
        - name: config
          configMap:
            name: pihole-config
        - name: etc-pihole
          persistentVolumeClaim:
            claimName: pihole-config
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: pihole
      containers:
        - name: pihole
          image: ghcr.io/pi-hole/pihole:latest@sha256:8bc45afe1625487aef62859a5bf02f3d7b3429e480f4e29e4689635ab86ec312
          imagePullPolicy: "IfNotPresent"
          # securityContext:
          # readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "200Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /etc/pihole
              name: etc-pihole
            - mountPath: /etc/pihole/adlists.list
              name: config
              subPath: adlist.txt
            - mountPath: /etc/pihole/blacklist.txt
              name: config
              subPath: blacklist.txt
          ports:
            - containerPort: 80
              name: web
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /admin/index.php
              port: web
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
