k8s/apps/default/pihole/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  serviceName: pihole
  volumeClaimTemplates:
    - metadata:
        name: pihole-db
      spec:
        storageClassName: ceph-block
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: pihole
    spec:
      volumes:
        - name: config
          configMap:
            name: pihole-config
      hostname: pihole
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: pihole
          image: ghcr.io/pi-hole/pihole:latest@sha256:8bc45afe1625487aef62859a5bf02f3d7b3429e480f4e29e4689635ab86ec312
          imagePullPolicy: "IfNotPresent"
          # securityContext:
          # readOnlyRootFilesystem: true
          resources:
            requests:
              memory: "200Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-db
            - mountPath: /etc/pihole/adlists.list
              name: config
              subPath: adlist.txt
          ports:
            - containerPort: 80
              name: web
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /admin/index.php
              port: web
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
