k8s/apps/default/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pihole.holywoo.cbannister.xyz
    # io.cilium/lb-ipam-ips: 192.168.42.53
spec:
  selector:
    app: pihole
  type: ClusterIP
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 80
      targetPort: web
      protocol: TCP
    - name: dns
      port: 53
      targetPort: 53
      protocol: UDP
