k8s/apps/default/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
spec:
  ingressClassName: internal
  rules:
    - host: &host pihole.holywoo.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - *host
